corpus/c/syntax/case-01/snapshots/gcc15/dual_sink_structured/render.ci.txt
note: some compiler details were not fully structured; original diagnostics are preserved
src/main.c:2:13: error: [syntax] expected ';' before '}}' token
want: ;
near: }} token
| src/main.c:2:13
|     return 0
|             ^
suggested edit: insert ';' at src/main.c:2:13
  patch: src/main.c
  2 -     return 0
  2 +     return 0;

src/main.c:2:13: error: [syntax] expected ';' before '}' token
src/main.c: In function 'main':
    2 |     return 0
      |             ^
      |             ;
    3 | }
      | ~
want: ;
near: } token
| src/main.c:2:13
|     return 0
|             ^